# Web-python

./: .gitignore  catalog.html  category-1.html  contacts.html  main.html  pyproject.toml  web.py
