[project]
name = "web-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Wizard",email = "merihov@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "self (>=2020.12.3,<2021.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
